package com.triptop.triptop.domains;

public enum AuthenticationMethods {
    KEY,
    SECRET,
    USERNAME_PASSWORD
}
